--- a/style.css
+++ b/style.css
@@ -1,10 +1,58 @@
-.btn{
-    background-color: blue;
-    color: white;
-    border-radius: 2px;
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    margin: 5px 30px;
+    /* background-color: skyblue; */
+}
+.top-nav-main{
+    display: flex;
+    justify-content: space-between;
+}
+.top-navbar-left{
+    display: flex;
+    box-sizing: border-box;
+}
+.icon-search{
+    padding: 8px 11px;
+    margin-right: 8px;
+    cursor: pointer;
+
+}
+.icon-menu{
+    padding: 8px;
+    margin-right: 8px;
     cursor: pointer;
 }
-.btn:hover{
-    background-color: yellow;
-    color: black;
+.icon-search:hover,.icon-menu:hover{
+    background-color: rgb(233, 228, 228);
+    transition: background-color 1s;
+    border-radius: 3px;
+}
+input[type=search]{
+    outline: none;
+    border-radius: 3px;
+    padding-left: 20px;
+    border: 1px solid rgb(233, 228, 228);
+    width: 21.5vw;
+    box-sizing: border-box;
+    margin-right: 8px;
+    font-size: 16px;
+    visibility: hi;
+}
+input[type=search]::placeholder{
+    color: grey;
+}
+.btn{
+    background-color: rgb(95, 150, 190);
+    color: white;
+    box-sizing: border-box;
+    padding: 8px;
+    border-radius: 3px;
+    border: none;
+    font-size: 10px;
+}
+.hiddenbtn{
+    visibility: hidden;
 }
