--- a/header.css
+++ b/header.css
@@ -3,8 +3,9 @@
     padding: 0;
 }
 body{
-    margin: 5px 30px;
+    padding: 5px 30px;
     /* background-color: skyblue; */
+    box-sizing: border-box;
 }
 .top-nav-main{
     display: flex;
@@ -116,3 +117,96 @@ input[type=search]::placeholder{
 }
 
 /* top navbar ends */
+
+/* middle navbar start */
+
+.middle-navbar{
+    display: flex;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-bottom: 1px solid rgb(237, 232, 232);
+}
+.middle-nav-left{
+    font-size: 13px;
+    flex: 33%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.middle-nav-middle{
+    flex: 33%;
+}
+.middle-nav-right{
+    font-size: 14px;
+    flex: 33%;
+    display: flex;
+    text-align: right;
+    flex-direction: column;
+    justify-content: center;
+}
+.top-content{
+    display: flex;
+    justify-content: flex-end;
+    font-size: 13px;
+}
+
+/* Middle navbar ends */
+
+/* Bottom navbar start */
+.nav-content{
+    margin-top: 7px;
+    padding-bottom: 7px;
+    display: flex;
+    justify-content: center;
+    border-bottom: 1px solid black;
+}
+.nav-content a{
+    text-decoration: none;
+    color: black;
+    padding: 5px 10px;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.nav-content a:hover{
+    border-radius: 3px;
+    background-color:rgb(248, 244, 244);
+    transition: 0.6s;
+}
+
+/* toggle left menubar */
+
+.toggle-left-menubar{
+    position:fixed;
+    left: -230px;
+    transition: left 1s;
+    top: 0;
+    background-color: white;
+    height: 100%;
+    padding: 5px 20px;
+    width: 18%;
+    box-sizing: border-box;
+    border-right:1px solid rgb(211, 204, 204);
+    box-shadow: 5px 0px 4px rgb(234, 231, 231);
+
+}
+.toggle-top-content,.toggle-middle-content{
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgb(226, 221, 221);
+    margin-bottom: 10px;
+}
+.toggle-bottom-content{
+    display: flex;
+    flex-direction: column;
+}
+.toggle-top-content a,.toggle-middle-content a,.toggle-bottom-content a{
+    color: black;
+    text-decoration: none;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 5px 0px 5px 15px;
+}
+.toggle-top-content a:hover,.toggle-middle-content a:hover,.toggle-bottom-content a:hover{
+    background-color: rgb(242, 239, 239);
+    transition: 0.8s;
+    border-radius: 5px;
+}
