--- a/header.css
+++ b/header.css
@@ -210,3 +210,10 @@ input[type=search]::placeholder{
     transition: 0.8s;
     border-radius: 5px;
 }
+
+@media only screen and (max-width:400px){
+    .toggle-left-menubar{
+        width: 50%;
+    }
+
+}
